quotes-service/kubernetes/grpcbin/01_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcbin
  template:
    metadata:
      labels:
        app: grpcbin
    spec:
      containers:
        - image: moul/grpcbin
          name: grpcbin
          ports:
            - containerPort: 9001
