quotes-service/kubernetes/grpcbin/02_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/protocol: grpcs
  name: grpcbin
  labels:
    app: grpcbin
spec:
  ports:
    - name: grpc
      port: 9001
      targetPort: 9001
  selector:
    app: grpcbin
